--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ man/
 .installed.cfg
 *.egg
 .ropeproject/
-
+tests/
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
